--- a/experiment/index.html
+++ b/experiment/index.html
@@ -53,6 +53,11 @@
                     javasprict(1)
                 </h2>
             </a>
+            <a href="js_two/index.html" class="link">
+                <h2>
+                    javasprict(2)
+                </h2>
+            </a>
         <P><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></P>
 </body>
 
