--- a/experiment/index.html
+++ b/experiment/index.html
@@ -58,6 +58,11 @@
                     javasprict(2)
                 </h2>
             </a>
+            <a href="calculate/index.html" class="link">
+                <h2>
+                    電卓アプリ
+                </h2>
+            </a>
         <P><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/></P>
 </body>
 
