--- a/experiment/calculate/index.html
+++ b/experiment/calculate/index.html
@@ -49,7 +49,7 @@
             <th><button onclick="key(7)"style="font-size: 50px;">7</button></th>
             <th><button onclick="key(8)"style="font-size: 50px;">8</button></th>
             <th><button onclick="key(9)"style="font-size: 50px;">9</button></th>
-            <th><button onclick="cal('AC')"style="font-size: 50px;">AC</button></th>
+            <th><button onclick="AC()"style="font-size: 50px;">AC</button></th>
         </tr>
         <tr>
             <th><button onclick="key(4)"style="font-size: 50px;">4</button></th>
@@ -115,17 +115,17 @@
                 console.log(num1**num2)
                 ans.textContent=(num1**num2)
                 break
-            case "AC":
-                num1=0
-                num2=null
-                cal_h=""
-                ans.textContent=num1
-                break
             default:
                 ans.textContent=0
                 console.error("eroor")
                 break
         }
+    }
+    function ac(){
+        num1=0
+        num2=null
+        cal_h=""
+        ans.textContent=num1
     }
    </script>
 </body>
