--- a/experiment/calculate/index.html
+++ b/experiment/calculate/index.html
@@ -49,7 +49,7 @@
             <th><button onclick="key(7)"style="font-size: 50px;">7</button></th>
             <th><button onclick="key(8)"style="font-size: 50px;">8</button></th>
             <th><button onclick="key(9)"style="font-size: 50px;">9</button></th>
-            <th><button onclick="AC()"style="font-size: 50px;">AC</button></th>
+            <th><button onclick="Ac()"style="font-size: 50px;">AC</button></th>
         </tr>
         <tr>
             <th><button onclick="key(4)"style="font-size: 50px;">4</button></th>
@@ -121,7 +121,7 @@
                 break
         }
     }
-    function ac(){
+    function Ac(){
         num1=0
         num2=null
         cal_h=""
